# WasserXR-Demo

./: .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: release.yml
materials/: base.json  blue.json
scenes/: cube.wxr  main.ts  main.wxr  monkey.ts  monkey.wxr  spin.wxr
shaders/: base.frag  base.vert  one.vert
src/: Spin_Component.c  main.c  main.rs  spin_system.c
src/glad/: gl.c
