[package]
name = "wasserxr-demo"
version = "0.2.0"
edition = "2024"
description = "A demo for the WasserXR Game Engine"
readme = "README.md"
repository = "https://github.com/LarsZauberer/WasserXR-Demo"
license-file = "LICENSE"
exclude = [ "result" ]

[dependencies]
wasserxr = "0.2.3"
wasserxr-core = {version = "0.2.0", optional = true}

[features]
default = []
static = ["dep:wasserxr-core"]

[lib]
crate-type = ["cdylib"]
